css/style.css
/* FONT */
@font-face {
	font-family: "OpenSans";
	src: url("../font/open-sans/OpenSans-Regular.ttf") format("truetype");
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: "OpenSans";
	src: url("../font/open-sans/OpenSans-Bold.ttf") format("truetype");
	font-weight: bold;
	font-style: normal;
}

@font-face {
	font-family: "OpenSans";
	src: url("../font/open-sans/OpenSans-Italic.ttf") format("truetype");
	font-weight: normal;
	font-style: italic;
}

@font-face {
	font-family: "OpenSans";
	src: url("../font/open-sans/OpenSans-BoldItalic.ttf") format("truetype");
	font-weight: bold;
	font-style: italic;
}

@font-face {
	font-family: "Raleway";
	src: url("../font/raleway/Raleway-Regular.ttf") format("truetype");
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: "Raleway";
	src: url("../font/raleway/Raleway-Bold.ttf") format("truetype");
	font-weight: bold;
	font-style: normal;
}





/* TRIVIALS */ 

* {
	margin: 0;
	padding: 0;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}

html {
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

body {
	color: #000;
	background-color: #0685c9;
	font-size: 16px;
	font-family: "OpenSans", "Helvetica Neue", "Helvetica", sans-serif;
}

h1, h2, h3, h4, h5, h6 {
	font-family: "Raleway", sans-serif;
	font-weight: bold;
	color: inherit;
}

h1, h2 {
	margin: 0;
}

h3, h4 {
	margin-top: 1rem;
	margin-bottom: 0.25rem;
}

h1 {
	font-size: 320%;
}

h2 {
	font-size: 200%;
}

h3 {
	font-size: 140%;
}

h4 {
	font-size: 130%;
}

h5 {
	font-size: 120%;
}

h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child {
	margin-top: 0;
}

p {
	line-height: 1.42857143em;
	margin-top: 0.25rem;
	margin-bottom: 1rem;
	text-align: justify;
}

p:first-child {
	margin-top: 0;
}

p:last-child {
	margin-bottom: 0;
}

a {
	color: #FF4365;
	text-decoration: none;
}

a:hover,
a:focus {
	color: inherit;
}





/* SEMANTICS */

header,
footer {
	position: relative;
	color: #fff;
	text-align: center;
	overflow: hidden;
}

header {
	padding: 3rem 0.5rem;
	background-color: #035882;
	border-bottom: 6px solid #fff;
}

@media screen and (min-width: 768px) {
	header {
		padding: 3rem 1rem;
	}
}

@media screen and (min-width: 992px) {
	header {
		padding: 3rem;
	}
}

@media screen and (min-width: 1200px) {
	header {
		padding: 5rem;
	}
}

header > h2 {
	opacity: 0.6;
	filter: Alpha(opacity=60);
}

footer {
	padding: 0.5rem;
	font-size: 85%;
	background-color: #111;
	border-top: 3px solid #fff;
}

footer a,
#supporters p > a {
	color: #ccc;
}

footer ul {
	list-style: none;
}

footer li {
	display: inline;
	margin: 0;
	padding: 0;
}

footer li + li::before {
	content: "| ";
}

main {
	position: relative;
	margin: 3rem 10px;
	overflow: hidden;
	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 0 20px 0 rgba(0, 0, 0, 0.2);
}

section {
	position: relative;
	padding: 5rem 1rem 2rem;
}

section:first-of-type {
	padding-top: 2rem;
}

@media screen and (min-width: 768px) {
	main {
		margin-left: 20px;
		margin-right: 20px;
	}
	section {
		padding-left: 1.5rem;
		padding-right: 1.5rem;
	}
}

@media screen and (min-width: 992px) {
	main {
		margin-left: 10%;
		margin-right: 10%;
	}
	section {
		padding: 6rem 3rem 3rem;
	}
	section:first-of-type {
		padding-top: 3rem;
	}
}

@media screen and (min-width: 1200px) {
	main {
		margin-left: 15%;
		margin-right: 15%;
	}
	section {
		padding: 6rem 4rem 4rem;
	}
	section:first-of-type {
		padding-top: 4rem;
	}
}

section:nth-child(even) {
	background-color: #FFF;
}

section:nth-child(odd) {
	background-color: #EEE;
}

section + section::before {
	position: absolute;
	display: block;
	top: 0px;
	left: 50%;
	-ms-transform: translate(-50%,0);
	-webkit-transform: translate(-50%,0);
	-moz-transform: translate(-50%,0);
	content: "";
	width: 0;
	height: 0;
	border-left: 90px solid transparent;
	border-right: 90px solid transparent;
}

section:nth-child(even) + section::before {
	border-top: 40px solid #FFF;
}

section:nth-child(odd) + section::before {
	border-top: 40px solid #EEE;
}





/* LAYOUT */

.row,
#methods {
	display: -webkit-flex;
	display: flex;
	-webkit-flex-direction: row;
	flex-direction: row;
	-webkit-justify-content: center;
	justify-content: center;
	-webkit-align-items: center;
	align-items: center;
	-webkit-flex-wrap: wrap;
	flex-wrap: wrap;
}

.items2 > div,
.items3 > div,
.items4 > div {
	width: 100%;
	padding: 1rem;
}

@media screen and (min-width: 768px) {
	.items2 > div,
	.items3 > div,
	.items4 > div {
		width: 50%;
	}
}

@media screen and (min-width: 992px) {
	.items3 > div {
		width: 33.33%;
	}
}

@media screen and (min-width: 1200px) {
	.items4 > div {
		width: 25%;
	}
}





/* ACCORDION */

.accordion {
	overflow: hidden;
	opacity: 1;
	-webkit-transition: height 1s ease, opacity 1s ease;
	transition: height 1s ease, opacity 1s ease;
}

.accordion:not(.active) {
	height: 0px;
	opacity: 0;
}





/* DONATION METHOD */

#methods input {
	display: none;
}

#methods label {
	position: relative;
	display: -webkit-flex;
	display: flex;
	-webkit-justify-content: center;
	justify-content: center;
	-webkit-align-items: center;
	align-items: center;
	cursor: pointer;
	height: 175px;
	width: 175px;
	margin: 16px;
	padding: 1rem;
	color: rgba(31, 31, 31, 0.7);
	font-weight: bold;
	text-align: center;
	background-color: rgba(0, 0, 0, 0.1);
	border: 6px solid rgba(6, 133, 201, 0);
	box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3), 0 0 8px 0 rgba(0, 0, 0, 0.3);
	transition: border .3s ease;
}

#methods label:hover {
	border: 6px solid rgba(6, 133, 201, 1);
}

#methods input[type="radio"]:checked + label {
	color: #fff;
	background-color: rgba(6, 133, 201, 1);
	box-shadow: none;
	box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3), 0 0 8px 0 rgba(0, 0, 0, 0.3);
}

#methods input[type="radio"]:checked + label:hover {
	background-color: rgba(6, 133, 201, 0.7);
	border: none;
}

#methods label > * {
	max-height: 100%;
	max-width: 100%;
	transition: transform .3s ease;
}

#methods label > img {
	width: 75%;
}

#methods label:hover > * {
	-webkit-transform: scale(1.2,1.2);
	transform: scale(1.2,1.2);
}





/* FORMS */

label[for] {
	cursor: pointer;
}

#method form {
	display: -webkit-flex;
	display: flex;
	-webkit-flex-direction: column;
	flex-direction: column;
	-webkit-flex-wrap: wrap;
	flex-wrap: wrap;
	margin: 3rem auto 0;
	width: 350px;
	max-width: 100%;
}

#method form input {
	margin-bottom: 8px;
}

#method form input[type="text"],
#method form input[type="email"] {
	padding: .25rem;
	background-color: #fff;
	box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1) inset, 0 0 4px 0 rgba(0, 0, 0, 0.1) inset;
	border: 1px solid rgba(31, 31, 31, 0.4);
	transition: background-color .3s ease, box-shadow .3s ease;
}

#method form input[type="text"]:focus,
#method form input[type="email"]:focus {
	border-color: rgba(6, 133, 201, 1);
	box-shadow: 0 0 4px 0 rgba(6, 133, 201, .1) inset, 0 0 4px 0 rgba(6, 133, 201, .1) inset;
}

#method form label {
	font-size: 80%;
	text-transform: uppercase;
}

.btn {
	position: relative;
	display: block;
	z-index: 1;
	cursor: pointer;
	overflow: hidden;
	width: 300px;
	max-width: 98%;
	margin: 0.5rem auto;
	padding: .8rem;
	color: rgba(31, 31, 31, 0.7);
	font-size: 90%;
	font-weight: bold;
	text-align: center;
	text-transform: uppercase;
	background-color: rgba(0, 0, 0, .1);
	box-shadow: 0 0 4px 0 rgba(0, 0, 0, .1) inset, 0 0 4px 0 rgba(0, 0, 0, .1) inset;
	border: none;
	transition: color .3s ease;
}

.btn.btn-default {
	color: rgba(255, 255, 255, 1);
}

.btn:hover {
	color: rgba(255, 255, 255, 1);
}

.btn.btn-default:hover {
	color: rgba(31, 31, 31, 0.7);
}

.btn::after {
	content: "";
	position: absolute;
	z-index: -1;
	bottom: 0;
	left: 0;
	height: 0%;
	width: 100%;
	background-color: rgba(6, 133, 201, 1);
	transition: height 0.3s ease 0s;
}

.btn.btn-default::after {
	height: 100%;
}

.btn:hover::after {
	height: 100%;
}

.btn.btn-default:hover::after {
	height: 0%;
}

.grp-transfer-outer {
	display: -webkit-flex;
	display: flex;
}

.grp-transfer {
	margin: auto;
}

.grp-amount,
.grp-interval {
	margin: 0 auto 16px;
}

.grp-amount > input,
.grp-interval > input {
	display: none;
}

.grp-amount > label,
.grp-interval > label {
	display: block;
	margin: 6px;
}

.grp-amount > label {
	padding: 8px;
	color: rgba(31, 31, 31, 0.7);
	font-size: 1rem !important;
	font-weight: bold;
	background-color: rgba(0, 0, 0, 0.1);
	box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1) inset, 0 0 4px 0 rgba(0, 0, 0, 0.1) inset;
	transition: background-color .3s ease, color .3s ease, box-shadow .3s ease;
}

.grp-amount > label::after {
	content: "€";
	margin-left: 3px;
}

.grp-amount > input[type="radio"]:checked + label,
.grp-amount > input[type="radio"] + label:hover {
	color: rgba(255, 255, 255, 1);
	background-color: rgba(6, 133, 201, 1);
	box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0) inset, 0 0 4px 0 rgba(0, 0, 0, 0) inset;
}

.grp-interval >  label {
	padding: 2px;
	cursor: pointer;
	text-transform: uppercase;
	border-bottom: 2px solid rgba(6, 133, 201, 0);
	transition: border-bottom .1s ease;
}

.grp-interval > input[type="radio"]:checked + label,
.grp-interval > input[type="radio"] + label:hover {
	border-bottom: 2px solid rgba(6, 133, 201, 1);
}

.amount-input {
	width: 50px;
	margin: 0 !important;
	padding: 0;
	color: rgba(31, 31, 31, 0.7);
	background-color: rgba(0, 0, 0, 0);
	border: none;
	transition: color .3s ease;
}

input[type="radio"]:checked + label > .amount-input,
input[type="radio"] + label:hover > .amount-input {
	color: rgba(255, 255, 255, 1);
}





/* OTHER */

.hidden {
	display: none !important;
	margin: 0 !important;
}

.noselect {
	-webkit-touch-callout: none !important;
	-webkit-user-select: none !important;
	-moz-user-select: none !important;
	-ms-user-select: none !important;
	user-select: none !important;
}

.center,
.center > p {
	text-align: center;
}

.border {
	padding: 1rem;
	border: 3px solid rgba(31, 31, 31, 0.7);
}





/* SPONSORING */

#packages .amount,
#supporters .amount {
	font-weight: bold;
	font-size: 1.4rem;
}

#packages .amount::after,
#supporters .amount::after {
	content: "€";
	margin-left: 0.2em;
}

#packages ul {
	margin: 1rem 0;
}

#packages li {
	margin: 0.4rem;
	list-style: none;
}

#packages li::before {
	content: "➤";
	margin-right: 0.2em;
	vertical-align: bottom;
	font-weight: bold;
}





/* SUPPORTERS */

#supporters {
	margin-top: 2rem;
	cursor: move;
}

#supporters .box {
	position: relative;
	min-width: 200px;
	max-width: 240px;
	padding: 0.5rem;
	color: #fff;
	text-align: center;
	background-color: #0685c9;
	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1), 0 0 10px 0 rgba(0, 0, 0, 0.1);
}

@media screen and (min-width: 768px) {
	#supporters .box {
		max-width: 300px;
		padding: 1rem;
	}
}

#supporters h5 {
	width: 100%;
	padding: .2rem .5rem .5rem;
	color: #fff;
}

#supporters img {
	height: 40px;
	width: auto;
	max-width: 100%;
	margin: auto;
}

#supporters .amount {
	width: 100%;
	padding: .2rem;
}

#supporters p {
	margin: 1rem 0;
	padding: 0 1rem;
	font-size: 85%;
}

